--- a/SourceCode/benchmark/pom.xml
+++ b/SourceCode/benchmark/pom.xml
@@ -76,7 +76,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version>
         </dependency>
-
+        <dependency>
+          <groupId>org.assertj</groupId>
+          <artifactId>assertj-core</artifactId>
+          <version>3.22.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
