--- a/SourceCode/benchmark/cfg.properties
+++ b/SourceCode/benchmark/cfg.properties
@@ -3,6 +3,6 @@
 # Click nbfs://nbhost/SystemFileSystem/Templates/Other/properties.properties to edit this template
 
 
-templateFolder=E:/final project/FinalProject/SourceCode/benchmark/templatePdf/
+templateFolder=templatePdf/
 templateSuffix=.html
 templateCharset=UTF-8
