booi xanh profile

--- a/SourceCode/benchmark/src/main/resources/log4j2.properties
+++ b/SourceCode/benchmark/src/main/resources/log4j2.properties
@@ -34,6 +34,8 @@ appender.console.name = consoleLogger
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
+log4j.logger.org.thymeleaf=DEBUG
+
 # Configure root logger
 rootLogger.level = debug
 rootLogger.appenderRef.rolling.ref = fileLogger
