--- a/SourceCode/benchmark/src/main/resources/log4j2.properties
+++ b/SourceCode/benchmark/src/main/resources/log4j2.properties
@@ -34,7 +34,7 @@ appender.console.name = consoleLogger
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-log4j.logger.org.thymeleaf=DEBUG
+log4j.logger.org.thymeleaf=OFF
 
 # Configure root logger
 rootLogger.level = debug
